--- a/GuestBookProject/Content/Site.css
+++ b/GuestBookProject/Content/Site.css
@@ -9,6 +9,12 @@
     padding-right: 15px;
 }
 
+@media (min-width: 1200px) {
+    .container {
+        width: 85%;
+    }
+}
+
 /* Override the default bootstrap behavior where horizontal description lists 
    will truncate terms that are too long to fit in the left column 
 */
@@ -17,8 +23,8 @@
 }
 
 /* Set width on the form input elements since they're 100% wide by default */
-input,
+/*input,
 select,
 textarea {
     max-width: 280px;
-}
+}*/
