--- a/GuestBookProject/Views/GuestBook/Create.cshtml
+++ b/GuestBookProject/Views/GuestBook/Create.cshtml
@@ -1,28 +1,14 @@
 ﻿@model GuestBookProject.EntityModel.GuestBook
 
-@{
-    ViewBag.Title = "Create";
-}
-
-<h2>Create</h2>
-
+<h2>新增留言</h2>
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
-    <div class="form-horizontal">
-        <h4>GuestBook</h4>
+    <div class="form-horizontal">       
         <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @*<div class="form-group">
-            @Html.LabelFor(model => model.Id, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Id, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Id, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
-
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })       
         <div class="form-group">
             @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -41,9 +27,8 @@
 
         <div class="form-group">
             @Html.LabelFor(model => model.Message, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @*@Html.EditorFor(model => model.Message, new { htmlAttributes = new { @class = "form-control" } })*@
-                @Html.TextAreaFor(model => model.Message, new { cols = 35, @rows = 4, @class = "form-control" ,@style="resize:none"})
+            <div class="col-md-10">      
+                @Html.TextAreaFor(model => model.Message, new { @rows = 5, @class = "form-control" ,@style="resize:none"})
                 @Html.ValidationMessageFor(model => model.Message, "", new { @class = "text-danger" })
 
 
@@ -51,14 +36,14 @@
         </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="新增" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("回到留言板", "Index")
 </div>
 
 @section Scripts {
