--- a/GuestBookProject/Views/GuestBook/Delete.cshtml
+++ b/GuestBookProject/Views/GuestBook/Delete.cshtml
@@ -1,14 +1,9 @@
 ﻿@model GuestBookProject.EntityModel.GuestBook
 
-@{
-    ViewBag.Title = "Delete";
-}
+<h2>刪除留言</h2>
 
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
+<h3>請確認是否刪除此留言</h3>
 <div>
-    <h4>GuestBook</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -49,8 +44,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="刪除" class="btn btn-default" /> |
+            @Html.ActionLink("回到留言板", "Index")
         </div>
     }
 </div>
