--- a/GuestBookProject/Views/Shared/_Layout.cshtml
+++ b/GuestBookProject/Views/Shared/_Layout.cshtml
@@ -1,12 +1,17 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - 我的 ASP.NET 應用程式</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/jqueryval")
+    @RenderSection("scripts", required: false)
+    <script src="~/Scripts/jsrender.js"></script>
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -17,13 +22,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("留言板", "Index", "GuestBook", new { @class = "navbar-brand" })
+                @Html.ActionLink("留言板", "Index", "GuestBook", null, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">                
-                    <li>@Html.ActionLink("留言板", "Index", "GuestBook")</li>
+                @*<ul class="nav navbar-nav">
                     <li>@Html.ActionLink("連絡人", "Contact", "Home")</li>
-                </ul>
+                </ul>*@
             </div>
         </div>
     </div>
@@ -34,9 +38,5 @@
             <p>&copy; @DateTime.Now.Year - Rong ASP.NET 留言板 Practise</p>
         </footer>
     </div>
-
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
 </body>
 </html>
