--- a/GuestBookProject/Views/Shared/_Layout.cshtml
+++ b/GuestBookProject/Views/Shared/_Layout.cshtml
@@ -28,6 +28,7 @@
                 @*<ul class="nav navbar-nav">
                     <li>@Html.ActionLink("連絡人", "Contact", "Home")</li>
                 </ul>*@
+                @Html.Partial("_LoginPartial")
             </div>
         </div>
     </div>
