--- a/GuestBookProject/Views/GuestBook/Create.cshtml
+++ b/GuestBookProject/Views/GuestBook/Create.cshtml
@@ -1,22 +1,35 @@
 ﻿@model GuestBookProject.EntityModel.GuestBook
-
+@using GuestBookProject.Identity;
 <h2>新增留言</h2>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">       
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })       
-        <div class="form-group">
-            @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
+    <div class="form-horizontal">
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @if (User.Identity.IsAuthenticated)
+        {
+            var loginUserDispalyName = User.Identity.GetDisplayName();
+            <div class="form-group">
+                @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">                   
+                    @Html.EditorFor(model => model.UserName,  new { @Value = "5", htmlAttributes = new { @class = "form-control" , @Value = loginUserDispalyName , @readonly = true} })
+                    @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        }
+        else
+        {
+            <div class="form-group">
+                @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        }
         <div class="form-group">
             @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -27,8 +40,8 @@
 
         <div class="form-group">
             @Html.LabelFor(model => model.Message, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">      
-                @Html.TextAreaFor(model => model.Message, new { @rows = 5, @class = "form-control" ,@style="resize:none"})
+            <div class="col-md-10">
+                @Html.TextAreaFor(model => model.Message, new { @rows = 5, @class = "form-control", @style = "resize:none" })
                 @Html.ValidationMessageFor(model => model.Message, "", new { @class = "text-danger" })
 
 
