--- a/GuestBookProject/Views/GuestBook/Edit.cshtml
+++ b/GuestBookProject/Views/GuestBook/Edit.cshtml
@@ -1,4 +1,5 @@
 ﻿@model GuestBookProject.EntityModel.GuestBook
+@using GuestBookProject.Identity;
 
 <h2>編輯留言</h2>
 @using (Html.BeginForm())
@@ -11,13 +12,27 @@
     @Html.HiddenFor(model => model.Id)
     @Html.HiddenFor(model => model.CreateDateTime)
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
-        </div>
-    </div>
+   @if (User.Identity.IsAuthenticated)
+        {
+            var loginUserDispalyName = User.Identity.GetDisplayName();
+            <div class="form-group">
+                @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">                   
+                    @Html.EditorFor(model => model.UserName,  new { @Value = "5", htmlAttributes = new { @class = "form-control" , @Value = loginUserDispalyName , @readonly = true} })
+                    @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        }
+        else
+        {
+            <div class="form-group">
+                @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        }
     <div class="form-group">
         @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
