--- a/GuestBookProject/Views/GuestBook/Index.cshtml
+++ b/GuestBookProject/Views/GuestBook/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model IEnumerable<GuestBookProject.EntityModel.GuestBook>
+@using Microsoft.AspNet.Identity;
 <style>
     .td-ellipsis {
         max-width: 100px;
@@ -10,7 +11,7 @@
 <h2>留言板</h2>
 
 <p>
-    <a href="@Url.Action("Create")" class="btn btn-primary">新增回覆</a>
+    <a href="@Url.Action("Create")" class="btn btn-success glyphicon glyphicon-plus"> 新增留言</a>
 </p>
 <table class="table">
     <tr>
@@ -52,9 +53,16 @@
                 @Html.DisplayFor(modelItem => item.Reply.Count)
             </td>
             <td>
-                <a class="glyphicon glyphicon-pencil" style="margin-right:15px" href="/GuestBook/Edit/@item.Id" />
-                <a class="glyphicon glyphicon-comment" style="margin-right:15px" href="/GuestBook/Details/@item.Id" />
-                <a class="glyphicon glyphicon-trash" href="/GuestBook/Delete/@item.Id" />
+                @if (User.Identity.IsAuthenticated && item.UserId != null && item.UserId == Convert.ToInt32(User.Identity.GetUserId()))
+                {
+                    <a class="glyphicon glyphicon-comment" style="margin-right:15px" href="/GuestBook/Details/@item.Id" />
+                    <a class="glyphicon glyphicon-pencil" style="margin-right:15px" href="/GuestBook/Edit/@item.Id" />
+                    <a class="glyphicon glyphicon-trash" href="/GuestBook/Delete/@item.Id" />
+                }
+                else
+                {
+                    <a class="glyphicon glyphicon-comment" style="margin-right:15px" href="/GuestBook/Details/@item.Id" />
+                }
             </td>
         </tr>
     }
