--- a/GuestBookProject/Views/Account/ResetPassword.cshtml
+++ b/GuestBookProject/Views/Account/ResetPassword.cshtml
@@ -1,7 +1,7 @@
 ﻿@using GuestBookProject.ViewModels;
 @model ResetPasswordViewModel
 @{
-    ViewBag.Title = "Reset password";
+    ViewBag.Title = "重設密碼";
 }
 
 <h2>@ViewBag.Title.</h2>
@@ -9,7 +9,7 @@
 @using (Html.BeginForm("ResetPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Reset your password.</h4>
+    <h4>重設您的密碼</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.Code)
