--- a/GuestBookProject/Views/Manage/ChangePassword.cshtml
+++ b/GuestBookProject/Views/Manage/ChangePassword.cshtml
@@ -1,15 +1,15 @@
 ﻿@using GuestBookProject.ViewModels;
 @model ChangePasswordViewModel
 @{
-    ViewBag.Title = "Change Password";
+    ViewBag.Title = "變更密碼";
 }
 
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title</h2>
 
 @using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Change Password Form</h4>
+    <h4>變更密碼表單</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
@@ -32,7 +32,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Change password" class="btn btn-default" />
+            <input type="submit" value="變更密碼" class="btn btn-default" />
         </div>
     </div>
 }
