* Dapper Model 抽成獨立專案

--- a/GuestBookProject/Views/GuestBook/Create.cshtml
+++ b/GuestBookProject/Views/GuestBook/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model GuestBookProject.EntityModel.GuestBook
+﻿@model GuestBookModel.Model.GuestBook
 @using GuestBookProject.Identity;
 <h2>新增留言</h2>
 
