--- a/GuestBookProject/Views/GuestBook/Delete.cshtml
+++ b/GuestBookProject/Views/GuestBook/Delete.cshtml
@@ -1,4 +1,5 @@
-﻿@model GuestBookProject.EntityModel.GuestBook
+﻿@model GuestBookModel.Model.GuestBook
+@using GuestBookModel.Model;
 
 <h2>刪除留言</h2>
 
