--- a/GuestBookProject/Views/GuestBook/Details.cshtml
+++ b/GuestBookProject/Views/GuestBook/Details.cshtml
@@ -1,4 +1,5 @@
-﻿@model GuestBookProject.EntityModel.GuestBook
+﻿@model GuestBookModel.Model.GuestBook
+@using GuestBookModel.Model;
 @using GuestBookProject.Identity;
 @{
     var Replys = Model.Reply;
