--- a/GuestBookProject/Views/GuestBook/Index.cshtml
+++ b/GuestBookProject/Views/GuestBook/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<GuestBookProject.EntityModel.GuestBook>
+﻿@model IEnumerable<GuestBookModel.Model.GuestBook>
+@using GuestBookModel.Model;
 @using X.PagedList;
 @using X.PagedList.Mvc;
 @using X.PagedList.Mvc.Common;
