--- a/GuestBookProject/Views/GuestBook/Edit.cshtml
+++ b/GuestBookProject/Views/GuestBook/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model GuestBookProject.EntityModel.GuestBook
+﻿@model GuestBookModel.Model.GuestBook
+@using GuestBookModel.Model;
 @using GuestBookProject.Identity;
 
 <h2>編輯留言</h2>
